Snippet realisation v. 0.0.2